# ssr

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  NEWS  README  README.md  SSR-installer.nsi  autogen.sh  cleanse.sh  configure.ac  generate_config.h.in  installer.nsi  macros.m4  release.sh  test_client.py  update_apf.txt
.circleci/: config.yml
apf/: .editorconfig  .gitattributes  .gitignore  NEWS  README  README.md  biquad.h  combine_channels.h  commandqueue.h  container.h  convolver.h  default_thread_policy.h  denormalprevention.h  dummy_thread_policy.h  gitmakedoc  jackclient.h  lockfreefifo.h  math.h  mextools.h  mimoprocessor.h  mimoprocessor_file_io.h  misc.h  parameter_map.h  pointer_policy.h  portaudio_policy.h  posix_thread_policy.h  rtlist.h  shareddata.h  sndfiletools.h  stopwatch.h
browser-gui/: Makefile.am  README.md  package.json  webpack.config.js
browser-gui/src/: index.js  sceneviewer.js  style.css
ci/: build-deps-macos.sh  build-deps-ubuntu.sh  build-deps.sh  build-small-libsndfile.sh  build-small-libxml2.sh  build-websocketpp.sh  install-deps.sh
data/: Makefile.am  asdf.xsd  local_ssr.sh  ssr  ssr.conf.example  ssr.conf.local
data/MacOSX/: DMG-Layout.applescript.in  Getting-Started.txt  Info.plist.in  Jack.webloc  Makefile.am  SSRIcon.icns  run-ssr.applescript  run-ssr.scpt  run-ssr.sh
data/MacOSX/dylibbundler/: help.html  index.html
data/MacOSX/dylibbundler/src/: Dependency.cpp  Dependency.h  DylibBundler.cpp  DylibBundler.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  main.cpp
data/impulse_responses/hrirs/: README.md
data/matlab_scripts/: make_wfs_prefilter.m  prepare_hrirs_cipic.m  prepare_hrirs_kemar.m
data/matlab_scripts/gui/: README.md  gui_for_ssr.fig  gui_for_ssr.m  start_ssr.sh  stimuli.asd
data/nsis/: Makefile.am  installer-script.nsi.in
data/reproduction_setups/: 2.0.asd  2.1.asd  5.1.asd  8channels.asd  circle.asd  loudspeaker_setup_with_nearly_all_features.asd  rostock_horizontal.asd  rounded_rectangle.asd
data/scenes/: asdf2html.xsl  live_input.asd  loudspeakers_1-2.asd  loudspeakers_3-4.asd  loudspeakers_5-6.asd  loudspeakers_7-8.asd  select_filter_by_index.pd  start_ssr_4_times_linux.sh  start_ssr_4_times_macos.sh  tracker_to_4_ssr.pd
data/websocket_resources/: ssr-test-client.html
doc/: Doxyfile  documentation.cpp
examples/: Makefile  README  audiofile_simpleprocessor.cpp  dummy_example.cpp  flext_simpleprocessor.cpp  jack_change_volume.cpp  jack_connections.cpp  jack_convolver.cpp  jack_dynamic_inputs.cpp  jack_dynamic_outputs.cpp  jack_matrix.cpp  jack_minimal.cpp  jack_query_thread.cpp  jack_simpleprocessor.cpp  package.txt  portaudio_simpleprocessor.cpp  simpleprocessor.h  startpd.sh
flext/: .editorconfig  8channels.asd  Makefile  README.md  README_Max.md  circle.asd  legacy_directionalpoint.cpp  legacy_orientation.cpp  legacy_position.cpp  objects.txt  package.txt  ssr_aap.cpp  ssr_aap~-help.pd  ssr_binaural.cpp  ssr_binaural~-help.pd  ssr_binaural~.cpp  ssr_brs~-help.pd  ssr_brs~.cpp  ssr_dca.cpp  ssr_dca~-help.pd  ssr_dca~.cpp  ssr_flext.h  ssr_global.cpp  ssr_messages.pd  ssr_nfc_hoa.cpp  ssr_nfc_hoa~-help.pd  ssr_vbap.cpp  ssr_vbap~-help.pd  ssr_wfs.cpp  ssr_wfs~-help.pd  startpd.sh  virtual_aap.pd  virtual_dca.pd  virtual_nfc_hoa.pd  virtual_vbap.pd  virtual_wfs.pd  xmlparser.cpp
man/: Makefile.am
mex/: DESCRIPTION  Makefile  README.md  ssr_aap.cpp  ssr_binaural.cpp  ssr_brs.cpp  ssr_dca.cpp  ssr_generic.cpp  ssr_helper.m  ssr_mex.h  ssr_nfc_hoa.cpp  ssr_vbap.cpp  ssr_wfs.cpp  test_hoa.m  test_ssr.m
misc/: Makefile.dependencies
pd/: README.md  legacy_ssrclient-help.pd  legacy_ssrclient.pd_lua  ssrclient-help.pd  ssrclient.pd  ssrclient.pd_lua  supperware_head_tracker_to_ssr.pd
performance_tests/: Makefile  biquad_count_denormals.cpp  biquad_denormals.cpp  crossfade.cpp  interpolation.cpp
src/: Doxyfile  Makefile.am  aaprenderer.h  api.h  audioplayer.cpp  audioplayer.h  audiorecorder.cpp  audiorecorder.h  binauralrenderer.h  brsrenderer.h  coding_style.txt  configuration.cpp  configuration.h  controller.h  dcacoefficients.h  dcarenderer.h  directionalpoint.cpp  directionalpoint.h  dynamic_scene.h  genericrenderer.h  geometry.h  hoacoefficients.h  laplace_coeffs_double.h  laplace_coeffs_float.h  legacy_directionalpoint.cpp  legacy_directionalpoint.h  legacy_loudspeaker.h  legacy_orientation.cpp  legacy_orientation.h  legacy_position.cpp  legacy_position.h  legacy_scene.cpp  legacy_scene.h  legacy_source.h  legacy_xmlsceneprovider.h  loudspeaker.h  loudspeakerrenderer.h  maptools.h  nfchoarenderer.h  orientation.cpp  (+37 more)
src/boostnetwork/: commandparser.cpp  commandparser.h  connection.cpp  connection.h  networksubscriber.cpp  networksubscriber.h  server.cpp  server.h
src/fudi/: connection.h  parser.h  server.cpp  server.h  subscriber.cpp  subscriber.h
src/gui/: qclicktextlabel.cpp  qclicktextlabel.h  qcpulabel.cpp  qcpulabel.h  qfilemenulabel.cpp  qfilemenulabel.h  qgui.cpp  qgui.h  qguiframe.cpp  qguiframe.h  qopenglplotter.cpp  qopenglplotter.h  qscenebutton.cpp  qscenebutton.h  qsourceproperties.cpp  qsourceproperties.h  qssrtimeline.cpp  qssrtimeline.h  qtimeedit.cpp  qtimeedit.h  quserinterface.cpp  quserinterface.h  qvolumeslider.cpp  qvolumeslider.h  qzoomlabel.cpp  qzoomlabel.h
src/legacy_network/: commandparser.cpp  commandparser.h  connection.cpp  connection.h  networksubscriber.cpp  networksubscriber.h  server.cpp  server.h
src/network/: commandparser.cpp  commandparser.h  connection.cpp  connection.h  networksubscriber.cpp  networksubscriber.h  server.cpp  server.h
src/networking/: oscclient.cpp  oscclient.h  oschandler.cpp  oschandler.h  oscreceiver.cpp  oscreceiver.h  oscsender.cpp  oscsender.h
src/razor-ahrs/: Example.cpp  README.txt  RazorAHRS.cpp  RazorAHRS.h
src/websocket/: connection.h  server.h
supercollider/: tests.scd  workflows.scd
tests/: Makefile.am  pathtools.cpp
unit_tests/: Makefile  iterator_test_macros.h  test_accumulating_iterator.cpp  test_fftwtools.cpp  (+12 more)
(+129 files in other folders)
